# lc3vm

./: .gitignore  CMakeLists.txt  README  STARTCR.DUAL.S  TODO  TODO_OPS  ishar_st_elite_2020_09_10.gar  notes.txt
alis/: addnames.c  alis.c  alis.h  alis_private.h  config.h  debug.c  escnames.c  main.c  opcodes.c  opernames.c  platform.c  script.c  script.h  storenames.c  sys.c  sys.h  utils.c  utils.h  vram.c  vram.h
alis/depack/: asm.h
alis/sys/: sys.h
alis/sys/sdl2/: sys_sdl2.c
ghidra/ishar2_st_elite/ishar2_st_elite.rep/: projectState
imgui/: imgui_demo.cpp
imgui/macos/: main.mm
lc3vm/: config.h  disasm.c  disasm.h  main.c  opcodes.c  opcodes.h  sys.c  sys.h  traps.c  traps.h  vm.c  vm.h  vm_tests.c  vm_tests.h
lc3vm-orig/: config.h  opcodes.c  opcodes.h  sys.c  sys.h  traps.c  traps.h  vm.c  vm.h  vm_tests.c  vm_tests.h
lc3vm-orig.xcodeproj/: project.pbxproj
lc3vm-orig.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
lc3vm.xcodeproj/: project.pbxproj
lc3vm.xcodeproj/xcshareddata/xcschemes/: lc3vm-orig.xcscheme
macos/: imgui.ini
macos/alis.xcodeproj/: project.pbxproj
macos/lc3vm.xcodeproj/: project.pbxproj
macos/lc3vm.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
scripts/: rogue.asm
tools/: ImportALIS.py  MarkALIS.py  logo.asm  main.asm  ops.numbers  todo.numbers
tools/Steem.SSE.4.0.2.Debug.Win64.DD/: FrameReport.txt  Steem SSE 4.0.2.rtf  auto_reset_backup.sts  steem.ini
tools/Steem.SSE.4.0.2.Debug.Win64.DD/disks/: Blank Disk.st
tools/pytools/: alis.py  check_offset.py  parse_steem_log.py
(+139 files in other folders)
